--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Eva Pan</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,21 +67,18 @@
           <span class="text-primary">Pan</span>
         </h1>
         <div class="subheading mb-5">San Leandro, CA 94579 · (510) 613-3621 ·
-          <a href="mailto:name@email.com">eva.li.pan@gmail.com</a>
+          <a href="mailto:eva.li.pan@gmail.com">eva.li.pan@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am a software engineer with over 7 years of proven track-record of identifying and solving strategic problems,
+        building efficient processes, and program managing domestic and international supply chain social impact initiatives in
+        fast-paced environments. I dedicated to leverage technology to drive business growth and sustainability through
+        improving business processes and fostering stakeholder collaboration.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/evaizli">
             <i class="fab fa-github"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -95,45 +92,52 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Supply Chain Manager</h3>
+            <div class="subheading mb-3">Fair Trade USA</div>
+            <ul>
+              <li>Led firm expansion initiatives in Asia; implemented factory ethical compliance programs in Vietnam and China in less than 2years.</li>
+              <li>Responsible for planning and overseeing execution of compliance improvement and worker empowerment activities at over 30
+              factories in 8 countries across East Asia, Southeast Asia, Latin America and North America, delivering positive impact
+              directly to over 55,000 workers.</li>
+              <li>Hired, trained and managed an international team of 5 to effectively implement program requirements.</li>
+              <li>Led the design, implementation and monitoring of a pilot certification recognition program with internal and external
+              stakeholders to streamline certification process and reduce factory audit fatigue.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">June 2016 - November 2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Certification Manager</h3>
+            <div class="subheading mb-3">Fair Trade USA</div>
+            <ul>
+              <li>Managed 600+ domestic and international client relationships using Salesforce CRM and increased client satisfaction and
+              compliance rate by 35% through developing and delivering tailored trainings via phone and webinars.</li>
+              <li>Managed audit program and developed and scaled new data governance, analysis, and reporting procedures for the
+              Certification Team in Excel and Tableau, directly leading to over $300K in recovered firm revenue.</li>
+              <li>Identified data relations and developed MySQL database that increased supply chain traceability and integrity by 60%.</li>
+              <li>Increased operational efficiency by over 200% through identifying and eliminating redundant workflow.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">March 2012 - June 2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Assistant Loan Processor</h3>
+            <div class="subheading mb-3">Abacus Financial Services</div>
+            <ul>
+              <li>Processed property loan applications, appraisal and preliminary reports on subject properties. </li>
+              <li>Responsible for computing closing fees and preparing closing documents.</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">August 2011 - February 2012</span>
           </div>
         </div>
 
@@ -149,24 +153,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">App Academy</h3>
+            <div class="subheading mb-3">Software Engineering Bootcamp</div>
+            <div>Rigorous 1000-hour software development course</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">March 2019 - June 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">The Job Hackers</h3>
+            <div class="subheading mb-3">Agile MBA</div>
+            <div>Six week trainning on all aspects of agile software development, Scrum, test-driven development, behavior-driven
+            development</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Janurary 2019 - May 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Mount Holyoke College</h3>
+            <div class="subheading mb-3">Bachelor of Art</div>
+            <div>Double Major - International Relations &amp; Asian Studies</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2007 - May 2012</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">International Christian University</h3>
+            <div class="subheading mb-3">One-year Studying Abroad Program</div>
+            <p>Certificate of One-Year Japanese Studies</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2009 - June 2010</span>
           </div>
         </div>
 
@@ -219,20 +245,51 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Languages</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Mandarin Chinese</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Cantonese Chinese</li>
+          <li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            Japanese</li>
+        </ul>
+        <br>
+        <div class="subheading mb-3">Other Professional Skills</div>
+        <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Account Management</li>
+          <li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Project Management</li>
+          <li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            International Program Management</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Corporate Social Responsibility</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Functional Team Collaborations</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Product Chain of Custody Audit</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Supply Chain Risk Analysis</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Operations Efficiency Analysis</li>
         </ul>
       </div>
     </section>
@@ -255,30 +312,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            ISO 9001:2015 Quality Management System Certification</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Certification of SA8000® Basic Social Compliance Auditor Training</li>
         </ul>
       </div>
     </section>
