update job hacker cert title

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">The Job Hackers</h3>
-            <div class="subheading mb-3">Agile MBA</div>
+            <div class="subheading mb-3">Agile &amp; Scrum MBA</div>
             <div>Six week trainning on all aspects of agile software development, Scrum, test-driven development, behavior-driven
             development</div>
           </div>
