--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
@@ -93,41 +94,45 @@
             <div class="subheading mb-3">Programming Languages &amp; Tools</div>
             <ul class="list-inline dev-icons">
               <li class="list-inline-item">
-                <i class="fab fa-html5"></i>
+                <i class="devicon-javascript-plain colored"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-css3-alt"></i>
+                <i class="devicon-nodejs-plain colored"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-js-square"></i>
+                <i class="devicon-ruby-plain-wordmark colored"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-angular"></i>
+                <i class="devicon-react-original-wordmark colored"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-react"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="fab fa-node-js"></i>
+                <i class="devicon-html5-plain-wordmark colored"></i>
               </li>
               <li class="list-inline-item">
                 <i class="fab fa-sass"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-less"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="fab fa-wordpress"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="fab fa-gulp"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="fab fa-grunt"></i>
+                <i class="devicon-css3-plain-wordmark colored"></i>
               </li>
               <li class="list-inline-item">
                 <i class="fab fa-npm"></i>
               </li>
+              <li class="list-inline-item">
+                <i class="devicon-heroku-plain-wordmark colored"></i>
+              </li>
+              <li class="list-inline-item">
+                <i class="devicon-git-plain-wordmark colored"></i>
+              </li>
+              <li class="list-inline-item">
+                <i class="devicon-babel-plain colored"></i>
+              </li>
+              <li class="list-inline-item">
+                <i class="devicon-mongodb-plain-wordmark colored"></i>
+              </li>
+              <li class="list-inline-item">
+                <i class="devicon-postgresql-plain-wordmark colored"></i>
+              </li>
+              
             </ul>
         
             <div class="subheading mb-3">Languages</div>
