--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
               <li class="list-inline-item">
                 <i class="devicon-nodejs-plain colored"></i>
               </li>
+                <li class="list-inline-item">
+                  <i class="devicon-rails-plain-wordmark colored"></i>
+                </li>
               <li class="list-inline-item">
                 <i class="devicon-ruby-plain-wordmark colored"></i>
               </li>
@@ -109,7 +112,7 @@
                 <i class="devicon-html5-plain-wordmark colored"></i>
               </li>
               <li class="list-inline-item">
-                <i class="fab fa-sass"></i>
+                <i class="devicon-sass-original colored"></i>
               </li>
               <li class="list-inline-item">
                 <i class="devicon-css3-plain-wordmark colored"></i>
@@ -122,9 +125,6 @@
               </li>
               <li class="list-inline-item">
                 <i class="devicon-git-plain-wordmark colored"></i>
-              </li>
-              <li class="list-inline-item">
-                <i class="devicon-babel-plain colored"></i>
               </li>
               <li class="list-inline-item">
                 <i class="devicon-mongodb-plain-wordmark colored"></i>
@@ -189,12 +189,64 @@
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
           <div class="w-100">
             <h2 class="mb-5">Projects</h2>
-            <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and
-              novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and
-              kayaking.</p>
-            <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am
-              an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the
-              front-end web development world.</p>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">Yollo</h3>
+                <div class="subheading mb-3">Ruby on Rails, React, Redux, PostGresSQL</div>
+                <div>A full-stack single-page clone of Trello, a web-based task and project management tool.</div>
+                <br>
+                <div class="social-icons">
+                  <a href="https://www.linkedin.com/in/evapan2000/">
+                    <i class="fas fa-link"></i>
+                  </a>
+                  <a href="https://github.com/evaizli/Yollo">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+                <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/project.png" alt=""> -->
+              </div>
+              <div class="resume-date text-md-right">
+              </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">TripMates</h3>
+                <div class="subheading mb-3">MongoDB, Express, React, Node.js</div>
+                <div>A full-stack team built web-based app that allows users to easily collaborate on planning trips with a group of people.</div>
+                <br>
+                <div class="social-icons">
+                  <a href="https://tripmates-aa.herokuapp.com/#/">
+                    <i class="fas fa-link"></i>
+                  </a>
+                  <a href="https://github.com/evaizli/tripmates">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+                <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/travel.jpg" alt=""> -->
+              </div>
+              <div class="resume-date text-md-right">
+              </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">Global Migration Map</h3>
+                <div class="subheading mb-3">JavaScript, DataMaps, News API, CSS, Webpack</div>
+                <div>An international migration heatmap visualizing United Nation Global Migration dataset 1990-2017.</div>
+                <br>
+                <div class="social-icons">
+                  <a href="https://evaizli.github.io/GlobalMigrationMap/">
+                    <i class="fas fa-link"></i>
+                  </a>
+                  <a href="https://github.com/evaizli/GlobalMigrationMap">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </div>
+                <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/map.png" alt=""> -->
+              </div>
+              <div class="resume-date text-md-right">
+              </div>
+            </div>
           </div>
         </section>
         
