update background color

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           <div class="resume-content">
             <h3 class="mb-0">The Job Hackers</h3>
             <div class="subheading mb-3">Agile &amp; Scrum MBA</div>
-            <div>Six week trainning on all aspects of agile software development, Scrum, test-driven development, behavior-driven
+            <div>Six week trainning on all aspects of agile software development, Scrum, test-driven development, and behavior-driven
             development</div>
           </div>
           <div class="resume-date text-md-right">
