--- a/index.html
+++ b/index.html
@@ -76,10 +76,13 @@
         improving business processes and fostering stakeholder collaboration.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in text-warning"></i>
           </a>
           <a href="https://github.com/evaizli">
-            <i class="fab fa-github"></i>
+            <i class="fab fa-github text-warning"></i>
+          </a>
+          <a href="https://github.com/evaizli">
+            <i class="fas fa-file-export text-warning"></i>
           </a>
         </div>
       </div>
@@ -89,7 +92,7 @@
 
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
           <div class="w-100">
-            <h2 class="mb-5">Skills</h2>
+            <h2 class="mb-5 text-primary">Skills</h2>
         
             <div class="subheading mb-3">Programming Languages:</div>
             <ul class="list-inline dev-icons">
@@ -213,7 +216,7 @@
         
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
           <div class="w-100">
-            <h2 class="mb-5">Projects</h2>
+            <h2 class="mb-5 text-primary">Projects</h2>
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="resume-content">
                 <h3 class="mb-0">Yollo</h3>
@@ -226,10 +229,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://www.linkedin.com/in/evapan2000/">
-                    <i class="fas fa-link"></i>
+                    <i class="fas fa-link text-warning"></i>
                   </a>
                   <a href="https://github.com/evaizli/Yollo">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github text-warning"></i>
                   </a>
                 </div>
               </div>
@@ -246,10 +249,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://tripmates-aa.herokuapp.com/#/">
-                    <i class="fas fa-link"></i>
+                    <i class="fas fa-link text-warning"></i>
                   </a>
                   <a href="https://github.com/evaizli/tripmates">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github text-warning"></i>
                   </a>
                 </div>
               </div>
@@ -267,10 +270,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://evaizli.github.io/GlobalMigrationMap/">
-                    <i class="fas fa-link"></i>
+                    <i class="fas fa-link text-warning"></i>
                   </a>
                   <a href="https://github.com/evaizli/GlobalMigrationMap">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github text-warning"></i>
                   </a>
                 </div>
               </div>
@@ -282,7 +285,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5 text-primary">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -343,7 +346,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5 text-primary">Education</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -397,13 +400,13 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <h2 class="mb-5 text-primary">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
+            <i class="fa-li fa fa-certificate text-warning"></i>
             ISO 9001:2015 Quality Management System Certification</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
+            <i class="fa-li fa fa-certificate text-warning"></i>
             Certification of SA8000® Basic Social Compliance Auditor Training</li>
         </ul>
       </div>
