--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://www.linkedin.com/in/evapan2000/">
-                    <i class="fas fa-link text-warning"></i>
+                    <i class="fas fa-link "></i>
                   </a>
                   <a href="https://github.com/evaizli/Yollo">
-                    <i class="fab fa-github text-warning"></i>
+                    <i class="fab fa-github "></i>
                   </a>
                 </div>
               </div>
@@ -249,10 +249,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://tripmates-aa.herokuapp.com/#/">
-                    <i class="fas fa-link text-warning"></i>
+                    <i class="fas fa-link "></i>
                   </a>
                   <a href="https://github.com/evaizli/tripmates">
-                    <i class="fab fa-github text-warning"></i>
+                    <i class="fab fa-github "></i>
                   </a>
                 </div>
               </div>
@@ -270,10 +270,10 @@
               <div class="resume-date text-md-right">
                 <div class="social-icons">
                   <a href="https://evaizli.github.io/GlobalMigrationMap/">
-                    <i class="fas fa-link text-warning"></i>
+                    <i class="fas fa-link "></i>
                   </a>
                   <a href="https://github.com/evaizli/GlobalMigrationMap">
-                    <i class="fab fa-github text-warning"></i>
+                    <i class="fab fa-github "></i>
                   </a>
                 </div>
               </div>
