--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <p class="lead mb-5">I am a software engineer with over 7 years of track-record of identifying and solving strategic problems,
         building efficient processes, and program managing domestic and international supply chain social impact initiatives in
-        fast-paced environments. I dedicated to leverage technology to drive business growth and sustainability through
+        fast-paced environments. I am dedicated to leverage technology to drive business growth and sustainability through
         improving business processes and fostering stakeholder collaboration.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/">
@@ -220,7 +220,7 @@
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="resume-content">
                 <h3 class="mb-0">Yollo</h3>
-                <div class="subheading mb-3">Ruby on Rails, React, Redux, PostGresSQL</div>
+                <div class="subheading mb-3">Ruby on Rails, React, Redux, PostGreSQL</div>
                 <div>A full-stack single-page clone of Trello, a web-based task and project management tool.</div>
                 <br>
                 
