update icon color

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         improving business processes and fostering stakeholder collaboration.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/">
-            <i class="fab fa-linkedin-in text-warning"></i>
+            <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/evaizli">
-            <i class="fab fa-github text-warning"></i>
+            <i class="fab fa-github"></i>
           </a>
           <a href="https://github.com/evaizli">
-            <i class="fas fa-file-export text-warning"></i>
+            <i class="fas fa-file-export"></i>
           </a>
         </div>
       </div>
@@ -261,7 +261,7 @@
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="resume-content">
                 <h3 class="mb-0">Global Migration Map</h3>
-                <div class="subheading mb-3">JavaScript, DataMaps, News API, CSS, Webpack</div>
+                <div class="subheading mb-3">JavaScript, DataMaps Library, News API, CSS, Webpack</div>
                 <div>An international migration heatmap visualizing United Nation Global Migration dataset 1990-2017.</div>
                 <br>
                
