update bio and add resume link

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         <div class="subheading mb-5">San Leandro, CA 94579 ·
           <a href="mailto:eva.li.pan@gmail.com">eva.li.pan@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a software engineer with over 7 years of track-record of identifying and solving strategic problems,
-        building efficient processes, and program managing domestic and international supply chain social impact initiatives in
-        fast-paced environments. I am dedicated to leverage technology to drive business growth and sustainability through
-        improving business processes and fostering stakeholder collaboration.</p>
+        <p class="lead mb-5">I am a seasoned supply chain sustainability professional turned software engineer. I have over 7 years of track-record
+        of identifying and solving strategic problems, building efficient business processes, and developing international
+        supply chain social impact initiatives. I desire to leverage my professional experience and technical skills to develop
+        high quality software that drive sustainability and make a difference in people’s lives.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/">
             <i class="fab fa-linkedin-in"></i>
@@ -81,7 +81,7 @@
           <a href="https://github.com/evaizli">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://github.com/evaizli">
+          <a href="/docs/epan_resume_061219.pdf">
             <i class="fas fa-file-export"></i>
           </a>
         </div>
@@ -228,7 +228,7 @@
               </div>
               <div class="resume-date text-md-right">
                 <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/evapan2000/">
+                  <a href="https://yollo-live-mas.herokuapp.com/">
                     <i class="fas fa-link "></i>
                   </a>
                   <a href="https://github.com/evaizli/Yollo">
