update resume content

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
           <a href="mailto:eva.li.pan@gmail.com">eva.li.pan@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a seasoned supply chain sustainability professional turned software engineer. I have over 7 years of track-record
-        of identifying and solving strategic problems, building efficient business processes, and developing international
-        supply chain social impact initiatives. I desire to leverage my professional experience and technical skills to develop
-        high quality software that drive sustainability and make a difference in people’s lives.</p>
+        of identifying and solving strategic problems, building efficient business processes, and developing international social impact initiatives. I desire to leverage my professional experience and technical skills to develop
+        high quality software that drive business sustainability and make a difference in people’s lives.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
@@ -81,7 +80,7 @@
           <a href="https://github.com/evaizli" title="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="/docs/EPan_Resume_June2019.pdf" title="Resume">
+          <a href="/docs/EPan_Resume_July2019.pdf" title="Resume">
             <i class="fas fa-file-export"></i>
           </a>
         </div>
@@ -286,6 +285,20 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5 text-primary">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Technical Admissions Specialist</h3>
+            <div class="subheading mb-3">App Academy</div>
+            <ul>
+              <li>Lead technical and non-technical interviews with prospective students, assessing algorithmic aptitude in a variety of
+              programming languages including Ruby, Python, JavaScript, and Java.</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2019 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
