--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@
         <div class="subheading mb-5">San Leandro, CA 94579 ·
           <a href="mailto:eva.li.pan@gmail.com">eva.li.pan@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am a seasoned supply chain sustainability professional turned software engineer. I have over 7 years of track-record
-        of identifying and solving strategic problems, building efficient business processes, and developing international social impact initiatives. I desire to leverage my professional experience and technical skills to develop
-        high quality software that drive business sustainability and make a difference in people’s lives.</p>
+        <p class="lead mb-5">After graduating from college with a double major in International Relations and Asian Studies, I was dreaming to have a
+        job that I can directly improve the livelihood of factory workers in Asia. I achieved my dream in 7 years working with
+        Fair Trade USA.
+        <br>
+
+        <br/>
+        And now, I am hungry to do more. So, in early 2019 I decided to change my career direction to pursue a new career path in software
+        development. I want to leverage the power of technology to contribute more in our global community.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
