--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
 
         <br/>
         And now, I am hungry to do more. So, in early 2019 I decided to change my career direction to pursue a new career path in software
-        development. I want to leverage the power of technology to contribute more in our global community.</p>
+        development. I want to leverage the power of technology to contribute more in our global community.
+        <br>
+        
+        <br />
+        I’m looking to work with amazing people who will believe in dedication and drive to become a great software engineer.
+</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
