--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <br>
         
         <br />
-        I’m looking to work with amazing people who will believe in dedication and drive to become a great software engineer.
+        I’m looking to work with amazing people who will believe in my dedication and drive to become a great software engineer.
 </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/evapan2000/" title="LinkedIn">
