update job details

--- a/index.html
+++ b/index.html
@@ -226,6 +226,24 @@
         <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
           <div class="w-100">
             <h2 class="mb-5 text-primary">Projects</h2>
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="resume-content">
+                <h3 class="mb-0">Puppeteer Workflow Automation</h3>
+                <div class="subheading mb-3">Puppeteer, JavaScript</div>
+                <div>An internal tool that utilized Puppeteer API to interact Chrome browser and automate the process of setting up HackerRank and Zoom meetings.</div>
+                <br>
+                
+                <!-- <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/project.png" alt=""> -->
+              </div>
+              <div class="resume-date text-md-right">
+                <div class="social-icons">
+                  <a href="https://github.com/evaizli/AutomateAAWorkFlow" title="GitHub Repo">
+                    <i class="fab fa-github "></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="resume-content">
                 <h3 class="mb-0">Yollo</h3>
@@ -303,6 +321,8 @@
             <ul>
               <li>Lead technical and non-technical interviews with prospective students, assessing algorithmic aptitude in a variety of
               programming languages including Ruby, Python, JavaScript, and Java.</li>
+              <li>Developed an internal tool utilizing Puppeteer API and JavaScript to automate the process of setting up HackerRank and Zoom meeting invitations with
+              candidates which resulted 15 minute time reduction of administrative work per shift.</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
